# BP_Grid_Trading_Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TELEGRAM_SETUP.md  async_grid_bot.py  backpack_api.py  backtest.py  grid_bot.py  main.py  openapi.json  order_manager.py  pyproject.toml  pytest.ini  requirements.txt  risk_manager.py  test_grid_verification.py
.github/workflows/: tests.yml
backtesting/metrics/: performance_metrics.py  performance_report.py
core/: exchange.py  websocket_manager.py
notifications/: telegram_notifier.py
scripts/: run_enhanced_backtest.py
strategies/: base_strategy.py  geometric_grid.py  grid_strategy.py
tests/: __init__.py
tests/unit/: test_grid_calculator.py
